# Lobic

./: .gitignore  Cargo.toml  package-lock.json  package.json  rustfmt.toml  tailwind.config.js
src/: App.jsx  AppState.jsx  app_state.rs  config.rs  const.jsx  index.css  lobby.rs  main.jsx  main.rs  user_pool.rs
src/components/LobbyCard/: LobbyCard.css  LobbyCard.jsx
src/components/Music/: Music.css  Music.jsx
src/components/MusicList/: MusicList.css  MusicList.jsx
src/components/MusicPlayer/: MusicPlayer.css  MusicPlayer.jsx
src/components/NavBar/: NavBar.css  NavBar.jsx
src/components/SongContainer/: SongContainer.jsx
src/routes/: get_music.rs  get_user.rs  login.rs  mod.rs  save_music.rs  signup.rs  socket.rs  verify.rs
src/routes/auth/: Auth.jsx
src/routes/chats/: Chats.css  Chats.jsx
src/routes/home/: Home.jsx
src/routes/lobby/: Lobby.css  Lobby.jsx
src/routes/login/: ForgotPassword.jsx  Login.css  Login.jsx
src/routes/playlist/: Playlist.jsx
src/routes/signup/: Signup.css  Signup.jsx
src/utils/: cookie.rs  exp.rs  jwt.rs  mod.rs
